[package]
name = "spook"
description = "File watcher geared towards automatic HTML generation and autoreload."
keywords = ["watcher", "SSE", "autoreload"]
categories = ["command-line-utilities", "filesystem", "development-tools"]
readme = "README.md"
license = "MIT/Apache-2.0"
version = "0.1.2"
authors = ["Serge Barral <serge.barral@quintescience.com>"]
repository = "https://github.com/sbarral/spook"
homepage = "https://github.com/sbarral/spook"
edition = "2018"

[dependencies]
notify = "4.0.17"
httparse = "1.3.3"
clap = {version = "2.34", default-features = false, features = [ "suggestions" ]}
